test/test_11813225_7.spl
int super_test()
{
  int x;
  undefined(1, 2);
  1=x;
}

char super_test()
{
  int cui = -1;
}